syntax = "proto3";
option go_package = ".;proto";

message Login {
  string token = 1;
  string eventName = 2;
}

message Player {
  string name = 1;
  string tz = 2;
}

message Timerange {
  int32 id = 1;
  int32 start = 2;
  int32 end = 3;
  string tz = 4;
}

message Timeranges {
  repeated Timerange timeranges = 1;
}

message Empty {}

service Gateway {
  rpc GetPlayer(Login) returns (Player);
  rpc GetTimeranges(Login) returns (Timeranges);
  rpc SetTimerange(Timerange) returns (Empty);
}
